# bb-browser

./: WORKSPACE  go_dependencies.bzl
Buildbarn/Browser/Frontend/: Api.elm  BUILD.bazel  Error.elm  Main.elm  Page.elm  Route.elm  Shell.elm  ShellTest.elm  Terminal.elm  TerminalTest.elm
Buildbarn/Browser/Frontend/Page/: Action.elm  Command.elm  Directory.elm  Tree.elm  Welcome.elm
cmd/bb_browser/: api_service.go  asset_service.go  browser_service.go  main.go
cmd/bb_browser/assets/: BUILD.bazel
cmd/bb_browser/frontend/: BUILD.bazel  Main.elm  Page.elm  Route.elm
cmd/bb_browser/frontend/Page/: Command.elm  Directory.elm  NotFound.elm  Welcome.elm
cmd/bb_browser/templates/: page_action.html  page_welcome.html  view_directory.html
patches/com_github_tiziano88_elm_protobuf/: empty-output.diff  recursive-type.diff
patches/elm_package_elm_url/: parse-remainder.diff
pkg/buildevents/: stream_parser.go
